updated mobile version

--- a/views/cities.phtml
+++ b/views/cities.phtml
@@ -41,8 +41,8 @@
 
 <div class="content-box-white" id="section1">
     <div class="container" style="    min-width: 70%;">
-        <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin about2">
-            <div class="col-5 col-md-10 animated zoomIn" id="about" style="padding-right: 100px;">
+        <div class="row row-50 justify-content-center justify-content-lg-between">
+            <div class="col-xl-5 col-sm-10 animated zoomIn" style="padding-right: 45px;">
                 <div>
                     <h1 style="text-align: left; color: rgb(217, 29, 21);">TEREN NA KTORYM DZIALAMY</h1>
                 </div>
@@ -57,7 +57,7 @@
                     <li><a href="bedzin"> <i class="fas fa-map-marker-alt" style="-webkit-font-smoothing: antialiased;"></i> Outsourcing IT Będzin</a></li>
                 </ul>
             </div>
-            <div class="col-7 col-md-10 animated zoomIn map border-shadow" style="    min-height: 450px;"></div>
+            <div class="col-xl-7 col-sm-10 animated zoomIn map border-shadow" style="    min-height: 450px;"></div>
         </div>
     </div>
 </div>
