--- a/views/contact.phtml
+++ b/views/contact.phtml
@@ -92,7 +92,7 @@
                     <div class="g-recaptcha" data-sitekey="6Lf79X8UAAAAAFk3oL6KKWfTyRoZSpwLiPtiSJzm">??</div>
                 </form>
             </div>
-            <div class="col col-right grey-contact">
+            <div class="col col-right grey-contact mobile-hidden">
                 <p>Dane kontaktowe:</P>
                 <div class="thumb-small">
                     <i class="fas fa-map-marker-alt" style="-webkit-font-smoothing: antialiased;"></i>
