--- a/views/home.phtml
+++ b/views/home.phtml
@@ -111,7 +111,7 @@
                     wieloletnim doświadczeniem. Jesteśmy tu dla Ciebie.
                 </p>
             </div>
-            <div class="col-md-6 col-lg-6 col-xs-6 office-worker img-mobile-hidden border-shadow animated fadeInRight">
+            <div class="col-md-6 col-lg-6 col-xs-6 office-worker mobile-hidden border-shadow animated fadeInRight">
             </div>
         </div>
 
@@ -200,7 +200,7 @@
 <div class="content-box-grey-icons">
     <div class="container" style="margin-left: 0px; padding-top: 50px;">
         <div class="row justify-content-center">
-            <div class="col-md-4 col-lg-4 col-xs-4 different-img img-mobile-hidden border-shadow" style="    box-shadow: 0px 0px 33px -5px rgba(0, 0, 0, 0.75);"></div>
+            <div class="col-md-4 col-lg-4 col-xs-4 different-img mobile-hidden border-shadow" style="    box-shadow: 0px 0px 33px -5px rgba(0, 0, 0, 0.75);"></div>
             <div class="col-md-5 col-lg-5 col-xs-5" style=" padding-left: 40px;">
                 <div class="hidden-to-animate">
                     <h2>GDZIE DZIAŁMY</h2>
@@ -270,7 +270,7 @@
 <div class="content-box-white">
     <div class="container">
         <div class="row row-50 justify-content-center justify-content-lg-between container-margin">
-            <div class=" col-md-6 col-lg-6 col-xs-6 hidden-to-animate-top">
+            <div class=" col-md-6 col-lg-6 col-xs-6 hidden-to-animate-zoom">
                 <!--                <h1>OUTSOURCING IT W TWOJEJ FIRMIE</h1>-->
                 <!--                <p>Masz już dosyć stresów i zastojów w pracy spowodowanych awaryjnością sprzętu w Twojej firmie?-->
                 <!--                    Jeśli tak,<b> to znalazłeś się we właściwym miejscu!</b>-->
@@ -282,7 +282,7 @@
                     równowagę w środowisku teleinformatycznym jego firmy. Zazwyczaj wszystko odbywa się tego samego dnia.
                 </p>
             </div>
-            <div class="col-md-6 col-lg-6 col-xs-6 office-girl img-mobile-hidden border-shadow hidden-to-animate-top">
+            <div class="col-md-6 col-lg-6 col-xs-6 office-girl mobile-hidden border-shadow hidden-to-animate-zoom">
             </div>
         </div>
 
