--- a/views/help.phtml
+++ b/views/help.phtml
@@ -18,7 +18,7 @@
 <div class="content-box-white" id="section1" style="background-color: rgba(128, 128, 128, 0.05);">
     <div class="container" style="    min-width: 70%; ">
         <div class="row row-50 justify-content-center justify-content-lg-between container-mrgin about2">
-            <div class="col-8 col-md-10 animated zoomIn" style="margin-left: 50px;margin-bottom: 100px; margin-top: -170px;
+            <div class="col-xl-8 col-sm-10  animated zoomIn" style="margin-bottom: 100px; margin-top: -170px;
     background: white;">
                 <div class="column mcb-column mcb-item-35pqqu31v one column_column" style="margin: 5%;">
                     <div class="column_attr clearfix" style="padding:0 10% 0 0;"><h2 style=" text-align: left; color :rgb(217, 29, 21);">Zdalne wsparcie</h2>
@@ -29,7 +29,7 @@
                             rozwiązań do zdalnego wsparcia. Jego producentem jest TeamViewer GmbH (<a href="https://www.teamviewer.com/en/privacy-policy/"
                                                                                                       style="color :rgb(217, 29, 21);">
                                 sprawdź politykę prywatności</a>)</p>
-                        <a href="https://get.teamviewer.com/wdtvy83" class="button_help">Pobierz program do pomocy zdalnej</a></div>
+                        <a href="https://get.teamviewer.com/wdtvy83" class="button_help">Pobierz</a></div>
                 </div>
             </div>
         </div>
