--- a/views/service.phtml
+++ b/views/service.phtml
@@ -13,8 +13,9 @@
     li {
         padding-bottom: 10px;
     }
+
     h1 {
-        color:  rgb(217, 29, 21);
+        color: rgb(217, 29, 21);
     }
 </style>
 <button id="back-to-top" title="Go to top"><i class="fas fa-angle-up"></i></button>
@@ -60,7 +61,7 @@
 <div class="content-box-white" id="section1">
     <div class="container" style="    min-width: 70%;">
         <div class="row row-50 justify-content-center justify-content-lg-between">
-            <div class="col-6 col-md-10 animated zoomIn tick-ul margin-auto" style="padding-right: 30px;">
+            <div class="col-xl-6 col-sm-10 animated zoomIn tick-ul margin-auto" style="padding-right: 30px;">
                 <h1 style="text-align: left">W CZYM MOŻEMY CI POMÓC</h1>
                 <ul>
                     <li>Wsparcie użytkowników (helpdesk)</li>
@@ -81,70 +82,71 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-6 col-lg-6 col-xs-6 animated zoomIn ideas img-mobile-hidden border-shadow ">
-            </div>
-            <div class="row row-50 justify-content-center justify-content-lg-between" style="margin-top: 100px; ">
-                <div class="col-md-10 col-lg-6 col-xs-6 server border-shadow"></div>
-                <div class="col-md-10 col-6 tick-ul" style="padding-left: 30px;">
-                    <h1>SPRAWDŹ CO JESZCZE MOŻEMY DLA CIEBIE ZROBIĆ
-                    </h1>
-
-                    <ul>
-                        <li>Dostawa sprzętu i oprogramowania
-                            Bezpośrednia dostawa sprzętu komputerowego, serwerów, oprogramowania
-                            oraz materiałów eksploatacyjnych w atrakcyjnych cenach.
-                        </li>
-                        <li>Projektowanie i budowa sieci strukturalnych
-                            Wykonujemy: sieci komputerowe LAN, instalacje elektryczne, monitoring CCTV
-                            IP, systemy RCP i KD. Instalacje wykonujemy z zachowaniem najwyższych
-                            standardów wraz z dostarczaniem stosownej dokumentacji oraz pomiarów.
-                        </li>
-                        <li>Microsoft Office 365
-                            Office 365 to firmowa poczta, dokumenty, kalendarz oraz praca grupowa w
-                            chmurze Microsoft. Mamy wieloletnie doświadczenie z migracją jak i
-                            administracją wszystkich usług dostępnych w Chmurze Microsoft Office 365
-                        </li>
-                        <li>Usługi w chmurze
-
-                            Udostępniamy własne, profesjonalne Centrum Przetwarzania Danych
-                            dotrzymujące najwyższych standardów bezpieczeństwa oraz realizujemy usługi
-                            w chmurze
-                            <!--                            <ul>-->
-                            <!--                                <li>-->
-                            <!--                                    Disaster Recovery as a Service - zapasowe środowisko pracy klasy Enterprise dla-->
-                            <!--                                    serwerów wirtualnych w ramach zasobów bezpiecznej chmury prywatnej, znajdujących-->
-                            <!--                                    się w naszym Data Center.-->
-                            <!--                                </li>-->
-                            <!--                                <li>-->
-                            <!--                                    Back-up as a Service - kompleksowa usługa zabezpieczania danych z aplikacji,-->
-                            <!--                                    serwerów i stacji roboczych Klienta, realizowana w oparciu o narzędzia i-->
-                            <!--                                    środowisko zapewniane przez naszą firmę. Obejmuje okresowe wykonywanie kopii-->
-                            <!--                                    zapasowych (przechowywanych zgodnie z ustaloną polityką backupu) oraz testowanie-->
-                            <!--                                    możliwości odtworzenia danych na środowisku zapasowym.-->
-                            <!--                                </li>-->
-                            <!--                                <li>-->
-                            <!--                                    Archive as a Service - Usługa dostarcza rozwiązanie problemów wynikających z-->
-                            <!--                                    przyrostu ilości danych w systemach informatycznych. Umożliwia bezpieczne-->
-                            <!--                                    przechowywanie dowolnej ilości danych w naszym Data Center bez ponoszenia-->
-                            <!--                                    kosztów związanych z rozbudową infrastruktury klienta.-->
-                            <!--                                </li>-->
-                            <!--                            </ul>-->
-                        </li>
-                        <li>Telefonia internetowa voip:
-                            Świadczymy usługi telekomunikacyjne oparte na technologii VoIP. Naszym
-                            klientom udostępniamy wirtualne centrale telefoniczne, które umożliwiają
-                            zbudowanie profesjonalnego systemu telekomunikacyjnego z funkcjami
-                            interaktywnymi.
-                        </li>
-                        <li>Internet dla Biznesu
-                            Dostarczamy szerokopasmowy Internet (z gwarancją SLA) za pomocą łącz
-                            światłowodowych w technologi xWDM 10 Gb/s oraz GPON z możliwością
-                            nieograniczonej rozbudowy. Dodatkowo zapewniamy łączenie oddziałów firm
-                            sieciami VLANami o przepływności od 10Mb/s do nawet 0,5Gbit/s.
-                        </li>
-                    </ul>
-                </div>
+            <div class="col-xl-6 col-sm-8 animated zoomIn ideas mobile-hidden border-shadow ">
             </div>
         </div>
+        <div class="row row-50 justify-content-center justify-content-lg-between" style="margin-top: 100px;    min-width: 70%; ">
+            <div class="col-xl-6 col-sm-8 hidden-to-animate-zoom  server border-shadow" style="min-height: 400px;"></div>
+            <div class="col-xl-6 col-sm-10 hidden-to-animate-zoom  tick-ul" style="padding-left: 30px;">
+                <h1>SPRAWDŹ CO JESZCZE MOŻEMY DLA CIEBIE ZROBIĆ
+                </h1>
+
+                <ul>
+                    <li>Dostawa sprzętu i oprogramowania
+                        Bezpośrednia dostawa sprzętu komputerowego, serwerów, oprogramowania
+                        oraz materiałów eksploatacyjnych w atrakcyjnych cenach.
+                    </li>
+                    <li>Projektowanie i budowa sieci strukturalnych
+                        Wykonujemy: sieci komputerowe LAN, instalacje elektryczne, monitoring CCTV
+                        IP, systemy RCP i KD. Instalacje wykonujemy z zachowaniem najwyższych
+                        standardów wraz z dostarczaniem stosownej dokumentacji oraz pomiarów.
+                    </li>
+                    <li>Microsoft Office 365
+                        Office 365 to firmowa poczta, dokumenty, kalendarz oraz praca grupowa w
+                        chmurze Microsoft. Mamy wieloletnie doświadczenie z migracją jak i
+                        administracją wszystkich usług dostępnych w Chmurze Microsoft Office 365
+                    </li>
+                    <li>Usługi w chmurze
+
+                        Udostępniamy własne, profesjonalne Centrum Przetwarzania Danych
+                        dotrzymujące najwyższych standardów bezpieczeństwa oraz realizujemy usługi
+                        w chmurze
+                        <!--                            <ul>-->
+                        <!--                                <li>-->
+                        <!--                                    Disaster Recovery as a Service - zapasowe środowisko pracy klasy Enterprise dla-->
+                        <!--                                    serwerów wirtualnych w ramach zasobów bezpiecznej chmury prywatnej, znajdujących-->
+                        <!--                                    się w naszym Data Center.-->
+                        <!--                                </li>-->
+                        <!--                                <li>-->
+                        <!--                                    Back-up as a Service - kompleksowa usługa zabezpieczania danych z aplikacji,-->
+                        <!--                                    serwerów i stacji roboczych Klienta, realizowana w oparciu o narzędzia i-->
+                        <!--                                    środowisko zapewniane przez naszą firmę. Obejmuje okresowe wykonywanie kopii-->
+                        <!--                                    zapasowych (przechowywanych zgodnie z ustaloną polityką backupu) oraz testowanie-->
+                        <!--                                    możliwości odtworzenia danych na środowisku zapasowym.-->
+                        <!--                                </li>-->
+                        <!--                                <li>-->
+                        <!--                                    Archive as a Service - Usługa dostarcza rozwiązanie problemów wynikających z-->
+                        <!--                                    przyrostu ilości danych w systemach informatycznych. Umożliwia bezpieczne-->
+                        <!--                                    przechowywanie dowolnej ilości danych w naszym Data Center bez ponoszenia-->
+                        <!--                                    kosztów związanych z rozbudową infrastruktury klienta.-->
+                        <!--                                </li>-->
+                        <!--                            </ul>-->
+                    </li>
+                    <li>Telefonia internetowa voip:
+                        Świadczymy usługi telekomunikacyjne oparte na technologii VoIP. Naszym
+                        klientom udostępniamy wirtualne centrale telefoniczne, które umożliwiają
+                        zbudowanie profesjonalnego systemu telekomunikacyjnego z funkcjami
+                        interaktywnymi.
+                    </li>
+                    <li>Internet dla Biznesu
+                        Dostarczamy szerokopasmowy Internet (z gwarancją SLA) za pomocą łącz
+                        światłowodowych w technologi xWDM 10 Gb/s oraz GPON z możliwością
+                        nieograniczonej rozbudowy. Dodatkowo zapewniamy łączenie oddziałów firm
+                        sieciami VLANami o przepływności od 10Mb/s do nawet 0,5Gbit/s.
+                    </li>
+                </ul>
+            </div>
+        </div>
+
     </div>
 </div>
